tests/snapshots/examples_fixtures/type_system__failing__181_effect_missing_colon.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/181_effect_missing_colon.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Effect Operation Colon

Missing `:` in effect operation signature. Write it as `op: Type -> Return`.

  examples/type_system/failing/181_effect_missing_colon.flx:20:24
   |
20 | effect Console { print String -> None }
   |                        ^^^^^^

Note:
  while parsing effect `Console`
== stdout ==
<not executed>
